--- a/index.html
+++ b/index.html
@@ -11,6 +11,18 @@
       href="https://fonts.googleapis.com/css2?family=Gowun+Dodum&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2
+?family=Jua
+&family=Gamja+Flower
+&family=Poor+Story
+&family=Dongle:wght@300;400;700
+&family=Kirang+Haerang
+&family=Nanum+Pen+Script
+&family=Black+Han+Sans
+&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div id="root"></div>
