--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/RokchaArchiveLogo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>록차 기록소</title>
+    <title>록차 아카이브</title>
 
     <!-- Google Fonts: Gowun Dodum -->
     <link
